--- a/contact.html
+++ b/contact.html
@@ -85,9 +85,9 @@
 	<section class="sample-text-area">
 		<div class="container box_1170">
 			<h3 class="text-heading">Christopher Nolan Edwards</h3>
-			<h4 class="mb-20">Alumnus of...</h4>
+			<h4 class="mb-20">Alumn of...</h4>
 				<ul class="unordered-list">
-					<li>Le tijra '07</li>
+					<li>La Tijera '07</li>
 					<li>Inglewood High '11</li>
 					<li>Morehouse College '15</li>
 				</ul>
@@ -115,8 +115,8 @@
                 <div class="col-xl-3 col-sm-6 col-md-4">
                     <div class="single-footer-widget footer_2">
                         <h4>Contact Chris</h4>
-                        <p>Alumnus of...
-						<br>-Le tijra '07
+                        <p>Alumn of...
+						<br>-La Tijera '07
 						<br>-Inglewood High '11
 						<br>-Morehouse College '15</p>
                         <div class="contact_info">
@@ -143,6 +143,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
         </div>
     </footer>
     <!-- footer part end--> 
+	
 	<script src="js/jquery-1.12.1.min.js"></script>
     <!-- popper js -->
     <script src="js/popper.min.js"></script>
