--- a/giveback.html
+++ b/giveback.html
@@ -114,8 +114,8 @@
                 <div class="col-xl-3 col-sm-6 col-md-4">
                     <div class="single-footer-widget footer_2">
                         <h4>Contact Chris</h4>
-                        <p>Alumnus of...
-						<br>-Le tijra '07
+                        <p>Alumn of...
+						<br>-La Tijera '07
 						<br>-Inglewood High '11
 						<br>-Morehouse College '15</p>
                         <div class="contact_info">
