--- a/contact.html
+++ b/contact.html
@@ -85,7 +85,7 @@
 	<section class="sample-text-area">
 		<div class="container box_1170">
 			<h3 class="text-heading">Christopher Nolan Edwards</h3>
-			<h4 class="mb-20">Alumn of...</h4>
+			<h4 class="mb-20">Alum of...</h4>
 				<ul class="unordered-list">
 					<li>La Tijera '07</li>
 					<li>Inglewood High '11</li>
@@ -115,7 +115,7 @@
                 <div class="col-xl-3 col-sm-6 col-md-4">
                     <div class="single-footer-widget footer_2">
                         <h4>Contact Chris</h4>
-                        <p>Alumn of...
+                        <p>Alum of...
 						<br>-La Tijera '07
 						<br>-Inglewood High '11
 						<br>-Morehouse College '15</p>
