--- a/giveback.html
+++ b/giveback.html
@@ -114,7 +114,7 @@
                 <div class="col-xl-3 col-sm-6 col-md-4">
                     <div class="single-footer-widget footer_2">
                         <h4>Contact Chris</h4>
-                        <p>Alumn of...
+                        <p>Alum of...
 						<br>-La Tijera '07
 						<br>-Inglewood High '11
 						<br>-Morehouse College '15</p>
