Fix relative url

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ body {
       // Set a timeout for 3 seconds (3000 milliseconds)
       setTimeout(function() {
           // Redirect to the application page
-          window.location.href = "/application.html";
+          window.location.href = "application.html";
       }, 3000); // Adjust the time as needed
   
   })();
