--- a/content.html
+++ b/content.html
@@ -147,7 +147,7 @@
                         <div class="row">
                             <div class="col-lg-12">
                                 <p class="footer-text m-0">
-Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website was created by <a href="http://anderita.org" target="_blank">Andrew Friedman</a></p>
+Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website was created by <a href="https://www.friedman.works" target="_blank">Andrew Friedman</a></p>
                             </div>
                         </div>
                     </div>
